# baselang

./: AGENTS.md  Cargo.toml  README.draft.md  README.md  TODO.md  fnox.toml  mise.toml  rust-toolchain.toml  rustc-ice-2026-04-13T03_19_38-9641.txt
.agents/: project.md  spec.md  test-case-minimization.md
.agents/prompts/: provide-counterexamples.md
.claude/: run.sh  settings.json
.claude/commands/: fix.md  implement-is-total.md  implement-nyms.md  implement-renderers.md  refactor-print.md
.github/workflows/: ci.yml
.mise/tasks/spec/: fix.sh
.yolobox/configs/dnsmasq.d/: allowed_domains.conf
aist/: AGENTS.md  Cargo.toml
aist/src/: adt.rs  ctx.rs  field.rs  fn.rs  fn_item.rs  functions.rs  get_mutators.rs  helpers.rs  into_symbol.rs  lib.rs  with_tcx.rs
aist/src/ctx/: inherent_fn_def_ids_by_symbol.rs  is_constructor.rs
aist/src/functions/: wraps_self.rs
cue/: main.cue
doc/: BaselangInBaselang.base  ConstructorsVsArgs.md  ConstructorsVsVars.md  ConstsVsVars.md  Definitions.md  Equality.md  Intro.v1.md  Intro.v2.md  RoadToInductiveTypes.md  Rules.md  ValueProposition.md  Vars.md
drafts/: Eq.base  EquivalentAssets.base  Gold.base  Money.base  Workspaces.base
samples/: AGENTS.md  all.plain.base  closure.laconic.base  testing.laconic.base  vector.plain.base
samples/contradictions/: alice-loves-dogs.english.base  alice-loves-dogs.plain.base
samples/experimental/: generator.laconic-scoped.base
spec/: Cargo.toml  spec.md
spec/spec/: concepts.base  concepts.base.notes.md  concepts.md
spec/src/: command.rs  facts.rs  functions.rs  helpers.rs  lib.rs  main.rs  spec_test_report.rs  syntactic_test_report.rs  types.rs
spec/src/command/: list_command.rs
spec/src/functions/: collect_types_from_file.rs  list_package_types.rs  run_rustc_wrapper_from_env.rs
spec/src/helpers/: ctx.rs  get_mutators.rs  outcome.rs
spec/src/spec_test_report/: struct_var.rs  tests.rs
spec/src/spec_test_report/struct_var/: struct_var_fields.rs  struct_var_methods.rs
spec/src/spec_test_report/struct_var/struct_var_fields/: struct_var_fields_constructors.rs  struct_var_fields_constructors_option_vec.rs  struct_var_fields_typ.rs
spec/src/spec_test_report/struct_var/struct_var_methods/: struct_var_methods_new.rs
spec/src/spec_test_report/tests/: must_implement_smart_application_test.rs
spec/src/syntactic_test_report/struct_var/struct_var_fields/: struct_var_fields_constructors_option_vec.rs
spec/src/types/: active_cfgs.rs  collected_type.rs  type_kind.rs  wrapper_invocation.rs
spec/tasks/: rewrite-package.md
spec/tst/: Cargo.toml
spec/tst/src/: lib.rs  user.rs
src/: demo.rs  errors.rs  lib.rs  macros.rs  main.rs  modules.rs  parse.rs  print.rs  render.rs  tests.rs  traits.rs  types.rs  utils.rs
src/demo/: bool_explicit.rs
src/errors/: check_error.rs  invalid_application_error.rs
src/macros/: impl_from_str_as_from_string.rs  impl_from_via.rs
src/modules/: bool.rs  bools.rs  equality.rs  int.rs  ints.rs  list.rs  lists.rs  measure.rs  nat.rs  nats.rs  prelude.rs  rat.rs  rats.rs  sum.rs  test_prelude.rs  unit.rs  units.rs  vectors.rs  wat.rs  wats.rs
src/parse/: parsers.rs
src/parse/parsers/: plain_parser.rs
src/parse/traits/: parse.rs
src/print/: functions.rs  tests.rs  types.rs
src/print/types/: capitalized.rs  language.rs  style.rs
src/render/: functions.rs  renderers.rs  tests.rs  types.rs
src/render/functions/: dedup_renders.rs  filter_renders.rs  parse_prints.rs  render_module.rs  render_vars.rs  renderer_factory.rs
src/render/renderers/: base_renderer.rs  cue_renderer.rs  english_renderer.rs  natural_renderer.rs  plain_renderer.rs
src/render/tests/: debug_renderer.rs  macros.rs
src/render/traits/: render.rs
src/samples/: AGENTS.md  vector.plain.base
src/traits/: alpha_eq.rs  module.rs  of.rs  print_all.rs  vars_vec.rs
src/types/: cli.rs  command.rs  constructors.rs  duo_vec.rs  exp.rs  nym.rs  nym_lang.rs  typ.rs  var.rs
src/utils/: concat_with_extend.rs  tuples.rs
(+28 files in other folders)
