[package]
name = "baselang"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Baselang is a language for describing how things work."
homepage = "https://github.com/DenisGorbachev/baselang"
repository = "https://github.com/DenisGorbachev/baselang"
readme = "README.md"
keywords = []
categories = []

[package.metadata.details]
title = "Baselang"
tagline = ""
summary = ""
announcement = ""
readme = { }

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
cli-util = { git = "https://github.com/DenisGorbachev/cli-util" }
# generic dependencies
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
fmt-derive = "0.1.2"
helpful = { git = "https://github.com/DenisGorbachev/helpful" }
itertools = { version = "0.14.0" }
pretty_assertions = "1.4.1"
standard-traits = { git = "https://github.com/DenisGorbachev/standard-traits" }
strum = { version = "0.27.1", features = ["derive"] }
stub-macro = { version = "0.1.3" }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }
tokio = { version = "1.39.2", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }

[package.metadata.cargo-machete]
ignored = ["stub-macro", "standard-traits", "helpful", "subtype"]
