[package]
name = "aist"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
description = "Compiler analysis helpers for Baselang specs"

[dependencies]
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive_more = { version = "2.1.1", features = ["deref"] }
errgonomic = { git = "https://github.com/DenisGorbachev/errgonomic" }
facet = { version = "0.44.3", features = ["reflect"] }
rustc-hash = { version = "2.1.2" }
smallvec = "1.15.1"
thiserror = "2.0.18"
