[package]
name = "spec"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
description = "Specification for Baselang"

[dependencies]
errgonomic = { git = "https://github.com/DenisGorbachev/errgonomic" }
futures = "0.3.32"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["fs", "rt"] }
stub-macro = "0.2.1"
facet = { version = "0.44.3", features = ["reflect"] }
facet-pretty = "0.44.4"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
rustc-hash = { version = "2.1.2" }

derive_more = { version = "2.1.1", features = ["deref", "deref_mut"] }
smallvec = "1.15.1"
