[package]
name = "tst"
version = "0.1.0"
edition = "2024"

# empty `[workspace]` is required to prevent this package from being treated as a workspace member
[workspace]

[dependencies]
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_more = { version = "2.1.1", features = ["full"] }
derive_setters = "0.1.9"
